syntax = "proto3";

package register;

import "google/protobuf/timestamp.proto";
/*
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
*/

message Customer {
    string id = 1;
    string name = 2;
    int64 age = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CustomerRequest {
    string id = 1;
    string name = 2;
    int64 age = 3;
}

message DeleteResponse {
    string message = 1;
}

message CustomerResponse {
    repeated Customer customer = 1;
}

service RegistrationService {
    rpc CreateCustomer (CustomerRequest) returns (CustomerResponse);
    rpc FindCustomer (CustomerRequest) returns (CustomerResponse);
    rpc DeleteCustomer (Customer) returns (CustomerResponse);
}

